set background image

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,3 +15,12 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+  body {
+    background-image: url("images/background.gif");
+    background-repeat: no-repeat;
+    /* background-repeat: repeat-y; */
+    background-size: cover;
+  }
+</style>
