change chart to be reactive and change background image

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,9 +18,8 @@
 
 <style>
   body {
-    background-image: url("images/background.gif");
+    background-image: url("images/background.jpg");
     background-repeat: no-repeat;
-    /* background-repeat: repeat-y; */
     background-size: cover;
   }
 </style>
